# concordium-ledger-app

./: .clang-format  .gitignore  .gitmodules  APP_SPECIFICATION.md  CHANGELOG.md  Dockerfile  Makefile  Makefile.common  Makefile.config  README.md  docker-compose.yml  gdb.sh  ledger_app.toml  z_debug
.clusterfuzzlite/: Dockerfile
.doxygen/: Doxyfile
.github/: PULL_REQUEST_TEMPLATE.md  build-pipeline.yml
.github/workflows/: build-pipeline.yml  cflite_pr.yml  codeql_checks.yml  coding_style_checks.yml  guidelines_enforcer.yml  misspellings_checks.yml  python_client_checks.yml  release-pipeline.yml  unit_tests.yml
doc/: APDU.md  TRANSACTION.md  api.md  credential_deployment.md  export_private_identity_data.md  export_private_key.md  export_private_key_seed.md  ins_add_anonymity_revoker.md  ins_add_baker.md  ins_add_identity_provider.md  ins_configure_baker.md  ins_configure_delegation.md  ins_encrypted_amount_transfer.md  ins_init_contract.md  ins_public_info_for_ip.md  ins_public_key.md  ins_register_data.md  ins_remove_baker.md  ins_sign_message.md  ins_sign_update_authorizations.md  ins_sign_update_exchange_rate.md  ins_sign_update_protocol.md  ins_transfer.md  ins_transfer_to_encrypted.md  ins_transfer_to_public.md  ins_transfer_with_schedule.md  ins_update_authorizations.md  ins_update_baker_keys.md  ins_update_baker_restake_earnings.md  ins_update_baker_stake.md  ins_update_contract.md  ins_update_cooldown_parameters.md  ins_update_election_difficulty.md  ins_update_gas_rewards.md  ins_update_mint_distribution.md  ins_update_pool_parameters.md  ins_update_transaction_fee_distribution.md  transfer.md  verify_address.md
fuzzing/: CMakeLists.txt  README.md  fuzz_tx_parser.c
fuzzing/extra/: TxParser.cmake
fuzzing/mocks/: ux.c  ux.h
governance-app/: CHANGELOG.md  Makefile  README.md
governance-app/doc/: ins_add_anonymity_revoker.md  ins_add_identity_provider.md  ins_create_plt.md  ins_higher_level_keys.md  ins_public_key.md  ins_update_authorizations.md  ins_update_baker_stake_threshold.md  ins_update_block_energy_limit.md  ins_update_cooldown_parameters.md  ins_update_exchange_rate.md  ins_update_finalization_committee_parameters.md  ins_update_foundation_account.md  ins_update_gas_rewards.md  ins_update_min_block_time.md  ins_update_mint_distribution.md  ins_update_pool_parameters.md  ins_update_protocol.md  ins_update_time_parameters.md  ins_update_timeout_parameters.md  ins_update_transaction_fee_distribution.md  ins_update_validator_score_parameters.md
governance-app/src/: descriptionView.c  descriptionView.h  globals.c  globals.h  glyphs.c  glyphs.h  main.c  menu.c  menu.h  signAddAnonymityRevoker.c  signAddAnonymityRevoker.h  signAddIdentityProvider.c  signAddIdentityProvider.h  signCreatePlt.c  signCreatePlt.h  signHigherLevelKeyUpdate.c  signHigherLevelKeyUpdate.h  signUpdateAuthorizations.c  signUpdateAuthorizations.h  signUpdateBakerStakeThreshold.c  signUpdateBakerStakeThreshold.h  signUpdateBlockEnergyLimit.c  signUpdateBlockEnergyLimit.h  signUpdateCooldownParameters.c  signUpdateCooldownParameters.h  signUpdateElectionDifficulty.c  signUpdateExchangeRate.c  signUpdateExchangeRate.h  signUpdateFinalizationCommitteeParameters.c  signUpdateFinalizationCommitteeParameters.h  signUpdateFoundationAccount.c  signUpdateFoundationAccount.h  signUpdateGasRewards.c  signUpdateGasRewards.h  signUpdateMinBlockTime.c  signUpdateMinBlockTime.h  signUpdateMintDistribution.c  signUpdateMintDistribution.h  signUpdatePoolParameters.c  signUpdatePoolParameters.h  (+10 more)
licenses/: README.txt  musl-MIT.txt
rust_tests/: Cargo.toml
rust_tests/src/: main.rs
src/: .#signUpdateAuthorizations.h  accountSenderView.c  accountSenderView.h  address.c  app_main.c  base58check.c  base58check.h  constants.h  deployModule.c  deployModule.h  descriptionView.c  descriptionView.h  displayCbor.c  displayCbor.h  exportData.c  exportData.h  exportPrivateKey.c  exportPrivateKey.h  exportPrivateKeySeed.c  exportPrivateKeySeed.h  getAppName.c  getAppName.h  getPublicKey.c  getPublicKey.h  globals.c  globals.h  initContract.c  initContract.h  main.c  memo.c  memo.h  menu.c  menu.h  menu_stax.c  numberHelpers.c  numberHelpers.h  responseCodes.h  sign.c  sign.h  signAddAnonymityRevoker.c  (+81 more)
src/apdu/: dispatcher.c
src/common/: base58check.c  base58check.h  getPublicKey.c  getPublicKey.h  handler.c  handler.h  mainHelpers.c  mainHelpers.h  menu.c  numberHelpers.c  numberHelpers.h  responseCodes.h  sign.c  sign.h  time.c  time.h  util.c  util.h
src/helper/: util.c  (+3 more)
submission_graphics/: Ledger_Manager_icon_template.ai  Ledger_Nano_S_icon_template solids.ai  Ledger_Nano_S_icon_template.ai
tests/: .eslintcache  .eslintrc.js  build_binaries.sh  conftest.py  globalSetup.js  jest.config.js  package-lock.json  package.json  public_key_test.py  requirements.txt  setup.cfg  signing_test.py  test_app_mainmenu.py  test_appname_cmd.py  test_configure_baker.py  test_configure_delegation.py  test_credential_deployment.py  test_deploy_module.py  test_error_cmd.py  test_export_private_key.py  test_init_contract.py  test_name_version.py  test_pubkey_cmd.py  test_public_information_for_ip.py  test_register_data.py  test_sign_cmd.py  test_transfer_to_public.py  test_update_contract.py  test_verify_address.py  test_version_cmd.py  tsconfig.jest.json  tsconfig.json  usage.md  utils.py
unit-tests/: CMakeLists.txt  test_tx_parser.c  test_tx_utils.c
unit_tests/: CMakeLists.txt  gen_coverage.sh
unit_tests/mocks/: cx.h  globals.c  mocks.c  os.c  os.h  sha256.c  sha256.h  shaMock.c  ux.h
unit_tests/tests/: testBase58Check.c  testNumberHelpers.c  testTime.c  testUtil.c
(+97 files in other folders)
